[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/GodotLoadScreenFinal/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/TitleScreen/TextButton.gd" type="Script" id=2]
[ext_resource path="res://SoundEffects/Perry_SEs_UIClick.wav" type="AudioStream" id=3]
[ext_resource path="res://SoundEffects/Perry_SEs_UIHover.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 3
outline_color = Color( 0.290196, 0.478431, 0.588235, 1 )
font_data = ExtResource( 1 )

[node name="TextButton" type="Label"]
margin_right = 288.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 144, 24 )
focus_mode = 2
mouse_filter = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.52549, 0.584314, 1 )
custom_colors/font_color_shadow = Color( 0.160784, 0.156863, 0.192157, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Button"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SoundEffects"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "SoundEffects"

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
